Add jck9 support to test.jck (#19)
* Add test targets for jck9

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Initial set of changes to support jck9

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Add template .jti files for jck9

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Remove separate configuration methods for jck8b and jck9

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Add more --add-modules options for jck9

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Add --add-modules java.xml for api/javax_xml

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>

* Add settings for jck9 - .jti files, overrides and --add-modules

Signed-off-by: Simon Rushton <rushton@uk.ibm.com>